# sparc-multiomics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
notebooks/MOFA/: 10A-MOFA_cluster_analysis_uc_colon.ipynb  10B-MOFA_cluster_analysis_cd_colon.ipynb  8A-MOFA_uc_colon.ipynb  8B-MOFA_cd_colon.ipynb  9A-MOFA_results_analysis_uc_colon.ipynb  9B-MOFA_results_analysis_cd_colon.ipynb
notebooks/UC-CD-prediction/: 11-multix_supervised_learning_uc_cd.ipynb
notebooks/genomics/: 5-genomics_raw_to_processed.ipynb  6-genomics_annotation.ipynb
notebooks/metadata/: 1-metadata_processing.ipynb  2-metadata_collection_date_aggregation.ipynb
notebooks/proteomics/: 7-proteomics_data_cleanup.ipynb
notebooks/transcriptomics/: 3-transcriptomics_raw_processing.ipynb  4-transcriptomics_batch_effect_correction.ipynb
sparc_multiomics/: MOFA_toolset.py  __init__.py  batch_correction.py  clustering.py  constants.py  hypothesis_testing.py  machine_learning.py  pathway_analysis.py  plotting.py  utils.py
