[tool.poetry]
name = "sparc_multiomics"
version = "0.0.1"
description = "Package to display the code for the CCF multiomics project"
authors = [
    "António J Preto",
    "Shaurya Chanana",
    "Daniel Ence",
    "Matt Healy",
    "Dani Domingo-Fernandéz",
    "Kiana West",
]
readme = "README.md"
packages = [{ include = "sparc_multiomics" }]

[tool.poetry.dependencies]
python = "~3.9"
awswrangler = "^3.4.0"
pandas = "1.5.3"
openpyxl = "^3.1.2"
tqdm = "^4.66.3"
ruff = "^0.1.14"
pydeseq2 = "^0.4.3"
gseapy = "^1.1.0"
mofapy2 = "^0.7.0"
s3fs = "^2023.12.1"
h5py = "^3.10.0"
mofax = "^0.3.6"
inmoose = "^0.2.3"
matplotlib-venn = "^0.11.9"
scikit-learn = "^1.3.0"
matplotlib = "3.8.2"
numpy = "1.26.2"
seaborn = "0.11.2"
fsspec = "2023.12.2"
pyproject-toml = "^0.0.10"
pyensembl = "2.2.9"
cyvcf2 = "^0.30.28"
umap-learn = "^0.5.4"
scipy = "^1.11.4"
statannotations = "^0.6.0"
xgboost = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
black = "^24.3.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
